# SPDX-FileCopyrightText: OpenTalk GmbH <mail@opentalk.eu>
#
# SPDX-License-Identifier: MIT OR Apache-2.0

[workspace]
members = ["redis-args-impl"]
resolver = "3"

[workspace.package]
authors = ["OpenTalk GmbH <mail@opentalk.eu>"]
homepage = "https://opentalk.eu/"
repository = "https://gitlab.opencode.de/opentalk/libs/redis-args"
version = "0.22.1"

[workspace.dependencies]
redis = "1.0"
redis-args = { path = ".", version = "0.22.1" }
redis-args-impl = { path = "redis-args-impl", version = "0.22.1" }
serde = "1"
serde_json = "1"
syn = "2"

[package]
authors.workspace = true
description = "Derive macro for reading and writing types for redis usage, either through serde or format args"
documentation = "https://docs.rs/redis-args"
edition = "2024"
homepage.workspace = true
license = "MIT OR Apache-2.0"
name = "redis-args"
publish = true
repository.workspace = true
version.workspace = true

[dependencies]
redis-args-impl.workspace = true
redis.workspace = true
serde_json.workspace = true

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
